@@ -35,7 +35,6 @@ import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.BytesRefBuilder;
 import org.apache.lucene.util.BytesRefIterator;
 import org.apache.lucene.util.IntsRef;
-import org.apache.lucene.util.UnicodeUtil;
 import org.apache.lucene.util.fst.Util;
 
 public class TestDaciukMihovAutomatonBuilder extends LuceneTestCase {
@@ -145,22 +144,11 @@ public class TestDaciukMihovAutomatonBuilder extends LuceneTestCase {
     }
 
     // Make sure every term produced by the automaton is expected
-    FiniteStringsIterator it = new FiniteStringsIterator(a);
-    if (isBinary) {
-      BytesRefBuilder scratch = new BytesRefBuilder();
-      for (IntsRef r = it.next(); r != null; r = it.next()) {
-        BytesRef t = Util.toBytesRef(r, scratch);
-        assertTrue(t + " unexpectedly produced by automaton", expected.contains(t));
-      }
-    } else {
-      // Note that we validate against the original automaton, not the compiled one as the compiled
-      // automaton can incorrectly produce invalid/overlong utf8 terms (see: GH#12458). This means
-      // we need slightly different logic here since the automaton "speaks" code points and not
-      // utf8 bytes.
-      for (IntsRef r = it.next(); r != null; r = it.next()) {
-        BytesRef t = newBytesRef(UnicodeUtil.newString(r.ints, r.offset, r.length));
-        assertTrue(t + " unexpectedly produced by automaton", expected.contains(t));
-      }
+    BytesRefBuilder scratch = new BytesRefBuilder();
+    FiniteStringsIterator it = new FiniteStringsIterator(c.automaton);
+    for (IntsRef r = it.next(); r != null; r = it.next()) {
+      BytesRef t = Util.toBytesRef(r, scratch);
+      assertTrue(expected.contains(t));
     }
   }
 
